fix bug + change name

--- a/templates/owner/base_owner.html
+++ b/templates/owner/base_owner.html
@@ -31,13 +31,13 @@
         <li class="sidebar-menu-item">
             <a href="{{ url_for('owner.dashboard') }}" class="sidebar-menu-link {{ 'active' if request.endpoint == 'owner.dashboard' }}">
                 <i class="fas fa-home"></i>
-                <span>Tất cả phòng</span>
+                <span>Homestay của bạn</span>
             </a>
         </li>
         <li class="sidebar-menu-item">
             <a href="{{ url_for('owner.view_bookings') }}" class="sidebar-menu-link {{ 'active' if request.endpoint == 'owner.view_bookings' }}">
                 <i class="fas fa-calendar-check"></i>
-                <span>Quản lý đặt phòng</span>
+                <span>Quản lý booking</span>
             </a>
         </li>
     </ul>
