--- a/templates/owner/calendar.html
+++ b/templates/owner/calendar.html
@@ -1,9 +1,9 @@
 {% extends 'owner/base_owner.html' %}
 
-{% block title %}Lịch đặt phòng{% endblock %}
+{% block title %}Lịch booking{% endblock %}
 
 {% block page_title %}Lịch{% endblock %}
-{% block page_subtitle %}Xem lịch đặt phòng của bạn{% endblock %}
+{% block page_subtitle %}Xem lịch booking của bạn{% endblock %}
 
 {% block page_css %}
 <style>
@@ -624,7 +624,7 @@
             </div>
             
             <div class="calendar-label">
-                Lịch đặt phòng
+                Lịch booking
             </div>
         </div>
 
@@ -689,7 +689,7 @@
 
             <!-- Booking Summary -->
             <div class="booking-summary">
-                <h4>Đặt phòng hôm nay</h4>
+                <h4>Lượt booking hôm nay</h4>
                 <div id="bookingSummary">
                     <!-- Today's bookings will be shown here -->
                 </div>
@@ -705,7 +705,7 @@
         <div class="modal-header">
             <h3 class="modal-title">
                 <i class="fas fa-calendar-check"></i>
-                Chi tiết đặt phòng
+                Chi tiết booking
             </h3>
         </div>
         <div class="modal-body">
