--- a/templates/owner/dashboard.html
+++ b/templates/owner/dashboard.html
@@ -1,9 +1,9 @@
 {% extends 'owner/base_owner.html' %}
 
-{% block title %}Tất cả nhà{% endblock %}
+{% block title %}Homestay của bạn{% endblock %}
 
-{% block page_title %}Tất cả nhà{% endblock %}
-{% block page_subtitle %}Quản lý tất cả nhà của bạn{% endblock %}
+{% block page_title %}Homestay của bạn{% endblock %}
+{% block page_subtitle %}Quản lý tất cả homestay của bạn{% endblock %}
 
 {% block page_css %}
 <style>
